--- a/perl.man.1
+++ b/perl.man.1
@@ -1,7 +1,10 @@
 .rn '' }`
-''' $Header: perl.man.1,v 1.0.1.2 88/01/30 17:04:07 root Exp $
+''' $Header: perl.man.1,v 1.0.1.3 88/02/04 17:48:02 root Exp $
 ''' 
 ''' $Log:	perl.man.1,v $
+''' Revision 1.0.1.3  88/02/04  17:48:02  root
+''' patch20: added missing chop($user); to example in chown.
+''' 
 ''' Revision 1.0.1.2  88/01/30  17:04:07  root
 ''' patch 11: random cleanup
 ''' 
@@ -862,6 +865,7 @@ Here's an example of looking up non-numeric uids:
 
 	print "User: ";
 	$user = <stdin>;
+	chop($user);
 	open(pass,'/etc/passwd') || die "Can't open passwd";
 	while (<pass>) {
 		($login,$pass,$uid,$gid) = split(/:/);
