--- a/perl.man.2
+++ b/perl.man.2
@@ -1,7 +1,10 @@
 ''' Beginning of part 2
-''' $Header: perl.man.2,v 1.0.1.3 88/02/01 17:33:03 root Exp $
+''' $Header: perl.man.2,v 1.0.1.4 88/02/04 17:48:31 root Exp $
 '''
 ''' $Log:	perl.man.2,v $
+''' Revision 1.0.1.4  88/02/04  17:48:31  root
+''' patch20: documented return values of system better.
+''' 
 ''' Revision 1.0.1.3  88/02/01  17:33:03  root
 ''' patch12: documented split more adequately.
 ''' 
@@ -401,8 +404,10 @@ First character is at offset 0, or whatever you've set $[ to.
 Does exactly the same thing as \*(L"exec LIST\*(R" except that a fork
 is done first, and the parent process waits for the child process to complete.
 Note that argument processing varies depending on the number of arguments.
-The return value is the exit status of the program.
-See exec.
+The return value is the exit status of the program as returned by the wait()
+call.
+To get the actual exit value divide by 256.
+See also exec.
 .Ip "tell(FILEHANDLE)" 8 6
 .Ip "tell" 8
 Returns the current file position for FILEHANDLE.
