Apply official patch #24
From Usenet article 'perl 1.0 patch #24' dated 4 Mar 88 04:08:14 GMT
on comp.sources.bugs

Subject: added new file test and symlink operators
Subject: "standard" location of perl changed from /bin to /usr/bin
Subject: in Makefile.SH, perl.o didn't depend on config.h
Subject: in x2p/Makefile.SH, a2p.o didn't depend on config.h
Subject: in Makefile, mv of old version was noisy if it didn't exist
Subject: add line number to cmd structure for better runtime error messages
Subject: some Xenix systems clobber errno on every sprintf()
Subject: return value of times() needed to be ignored on Pyramids
Subject: added (char*) cast to 0 in execl()
Subject: division by 0 now gives a reasonable message
Subject: bad pattern optimization showed up when used with ..
Subject: files ending in "0" with no newline not treated consistently
Subject: made some identifiers unique in first 7 chars
Subject: in perldb, / is treated like operator when it should be match delim
Subject: some machines don't handle types right in return (a,b,c)
Subject: "$1text" did not interpolate $1 correctly
Subject: grandfathering of \digit in substitutions wasn't working
Subject: ^L is now a valid space character
Subject: in a2p, some print statements need parens around them
Subject: in a2p, blank lines were being treated like they had semicolons on them
Subject: in a2p, warning message now printed when unsure of some translations
Subject: in s2p, white space wasn't handled between the pattern and the command
From: all sorts of people

Description:
	(Note: this is really the first part of patch 24.  Patch 25 must also
	be applied before recompiling.)

	By popular demand, you now have all the usual file tests: -r, -w, etc.
	They are simply unary operators.

	I've also added the symlink() function for those systems that can
	support it.

	The "standard" location of perl has changed from /bin to /usr/bin.
	The primary motivation for this is the file system reorganization
	that Sun and Ber

--- a/perl.man.1
+++ b/perl.man.1
@@ -1,7 +1,10 @@
 .rn '' }`
-''' $Header: perl.man.1,v 1.0.1.6 88/02/25 11:42:26 root Exp $
+''' $Header: perl.man.1,v 1.0.1.7 88/03/02 12:36:18 root Exp $
 ''' 
 ''' $Log:	perl.man.1,v $
+''' Revision 1.0.1.7  88/03/02  12:36:18  root
+''' patch24: documented file tests
+''' 
 ''' Revision 1.0.1.6  88/02/25  11:42:26  root
 ''' patch23: two typos and an omission.
 ''' 
@@ -769,6 +772,41 @@ Examples:
     s/^/> / if (/^$/ .. eof());	# quote body
 
 .fi
+.Ip -x 8
+A file test.
+This unary operator takes one argument, a filename, and tests the file
+to see if something is true about it.
+It returns 1 for true and '' for false.
+Precedence is higher than logical and relational operators, but lower than
+arithmetic operators.
+The operator may be any of:
+.nf
+	-r	File is readable by effective uid.
+	-w	File is writeable by effective uid.
+	-x	File is executable by effective uid.
+	-o	File is owned by effective uid.
+	-R	File is readable by real uid.
+	-W	File is writeable by real uid.
+	-X	File is executable by real uid.
+	-O	File is owned by real uid.
+	-e	File exists.
+	-z	File has zero size.
+	-s	File has non-zero size.
+	-f	File is a plain file.
+	-d	File is a directory.
+	-l	File is a symbolic link.
+
+.ne 7
+Example:
+	
+	while (<>) {
+		chop;
+		next unless -f $_;	# ignore specials
+		...
+	}
+
+.fi
+Note that -s/a/b/ does not do a negated substitution.
 .PP
 Here is what C has that
 .I perl
