Apply official patch #23
From Usenet article 'perl 1.0 patch #23' dated 26 Feb 88 00:10:15 GMT
on comp.sources.bugs

Subject: str_gets() can stomp malloc arena under certain circumstances.
Subject: unshift can wipe out malloc arena on some machines
Subject: label on null statement can cause core dump.
Subject: perl inappropriately modifies filename passed to open()
Subject: the -i switch with no backup extension truncates the file
Subject: Configure couldn't find cpp in /usr/lib
Subject: Configure didn't set RENAME like it should
Subject: four typos and two clarifications in the manual
Subject: extra argument to cmd_free() in perly.c
Subject: optimization incorrectly allowed ?pat? to match more than once
Subject: (.*) in pattern wouldn't match null string.
Subject: in a2p, some patterns ended up not enclosed in slashes.
Subject: in a2p, added eval kludge for systems that don't grok #!.
Subject: perlsh shouldn't use $_ and should restore $/ properly
Subject: perldb doesn't correctly handle "else" and "continue".
From: lotsa good people whom I haven't the time to acknowledge properly

Description:
	The routine that does <> processing, str_gets(), can occasionally
	overwrite the end of an malloced string, depending on the size
	of your stdio buffer and the length of the line of input.
	Interestingly enough, this showed up first in TEST where it tries
	to collect all the filenames of all the tests to run.  After patching,
	there were enough *.orig files on some systems to reveal the bug
	on systems with small (512 byte) stdio buffers.  To the person
	who asked if I run TEST before sending out patches, the answer is
	"yes".  But my environment isn't the same as your environment.

	The unshift function can overwrite the end of an malloced string,
	resulting in looping or dumps on some systems, depending on how
	your malloc works.

	Putting a label on a null statement, as in:
		foo: ;
	can sometimes cause a core dump.  There was a missing argument to
	add_label() in perl.y

--- a/perl.man.1
+++ b/perl.man.1
@@ -1,7 +1,10 @@
 .rn '' }`
-''' $Header: perl.man.1,v 1.0.1.5 88/02/12 10:26:35 root Exp $
+''' $Header: perl.man.1,v 1.0.1.6 88/02/25 11:42:26 root Exp $
 ''' 
 ''' $Log:	perl.man.1,v $
+''' Revision 1.0.1.6  88/02/25  11:42:26  root
+''' patch23: two typos and an omission.
+''' 
 ''' Revision 1.0.1.5  88/02/12  10:26:35  root
 ''' patch22: some systems don't have \(bs
 ''' 
@@ -439,7 +442,7 @@ filename at the beginning of the array.
 Line numbers ($.) continue as if the input was one big happy file.
 .PP
 .ne 5
-If you want to set @ARGV to you own list of files, go right ahead.
+If you want to set @ARGV to your own list of files, go right ahead.
 If you want to pass switches into your script, you can
 put a loop on the front like this:
 .nf
@@ -826,7 +829,7 @@ operator.
 This is a useful optimization when you only want to see the first occurence of
 something in each of a set of files, for instance.
 .Ip "chdir EXPR" 8 2
-Changes the working director to EXPR, if possible.
+Changes the working directory to EXPR, if possible.
 Returns 1 upon success, 0 otherwise.
 See example under die().
 .Ip "chmod LIST" 8 2
@@ -996,6 +999,7 @@ as with subroutines.
 If there is a syntax error or runtime error, a null string is returned by
 eval, and $@ is set to the error message.
 If there was no error, $@ is null.
+If EXPR is omitted, evaluates $_.
 .Ip "exec LIST" 8 6
 If there is more than one argument in LIST,
 calls execvp() with the arguments in LIST.
