Apply official patch #22
From Usenet article 'perl 1.0 patch #22' dated 12 Feb 88 21:20:29 GMT
on comp.sources.bugs

Subject: a mixed bag
From: jbs@EDDIE.MIT.EDU (Jeff Siegal)
From: imagen!jfinger (Jeff Finger)
From: Syd Weinstein <syd@dsinc>
From: ateng!chip (Chip Salzenberg)
From: leblanc%bosco.Berkeley.EDU@ucbvax.Berkeley.EDU (Emile LeBlanc)
From: stride.Stride.COM!bruce (Bruce Robertson)
From: dukeac.uucp!bet (Bennett ???)
From: Sakari Jalovaara <sja@santra.hut.fi>
From: alan@uc.msc.umn.edu (Alan Kleitz)
and many others too numerous to thank properly...

Description:
	Configure needed to use chmod +x instead of chmod 755 to avoid
	clobbering group write permissions.

	The Configure unit asking about index() vs strchr() was beginning
	to show its age.

	The libc unit didn't allow for C libraries called "/lib/clib" on
	Apollos.

	All the .SH files said ". config.sh", when they need to say
	". ./config.sh" if . isn't in the path.

	In the part of the tokener that snarfs multi-line strings there
	was a null pointer dereference that caused grief if you had
	a string that ran to the end of the file without a closing delimiter.

	The SVID lets you bash register variables between a setjmp() and
	a longjmp().  It would seem that most systems don't, but the Cray
	does.  If anyone else's does, lemme know.  I like that register
	declaration in cmd_exec() too much to make everybody do without it.

	In arg.c, calls to do_kv() and do_each() caused a double free().
	Well, actually, a realloc() followed by a free().

	There were a couple of potential problems with null pointer
	dereferencing in the O_PRINT code.

	In O_SYSTEM, the returned status value was erroneously sign extended.

	In O_{LEFT,RIGHT}_SHIFT, some compilers couldn't handle the complexity
	of the expression.

	The malloc routines really ought to yell if they get bad arguments.

	The op.exec test assumed that the "false" script returns 1.  On
	"standard" machines it returns 255.

	The op.magic script magically put

--- a/perl.man.1
+++ b/perl.man.1
@@ -1,7 +1,10 @@
 .rn '' }`
-''' $Header: perl.man.1,v 1.0.1.4 88/02/06 00:19:44 root Exp $
+''' $Header: perl.man.1,v 1.0.1.5 88/02/12 10:26:35 root Exp $
 ''' 
 ''' $Log:	perl.man.1,v $
+''' Revision 1.0.1.5  88/02/12  10:26:35  root
+''' patch22: some systems don't have \(bs
+''' 
 ''' Revision 1.0.1.4  88/02/06  00:19:44  root
 ''' patch21: documented -v, /foo/i.
 ''' 
@@ -40,11 +43,11 @@
 '''     string Tr holds user defined translation string.
 '''     Bell System Logo is used as a dummy character.
 '''
-.tr \(bs-|\(bv\*(Tr
+.tr \(*W-|\(bv\*(Tr
 .ie n \{\
-.ds -- \(bs-
-.if (\n(.H=4u)&(1m=24u) .ds -- \(bs\h'-12u'\(bs\h'-12u'-\" diablo 10 pitch
-.if (\n(.H=4u)&(1m=20u) .ds -- \(bs\h'-12u'\(bs\h'-8u'-\" diablo 12 pitch
+.ds -- \(*W-
+.if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
+.if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\" diablo 12 pitch
 .ds L" ""
 .ds R" ""
 .ds L' '
