--- a/perldb.man
+++ b/perldb.man
@@ -1,7 +1,10 @@
 .rn '' }`
-''' $Header: perldb.man,v 1.0.1.2 88/01/30 17:04:48 root Exp $
+''' $Header: perldb.man,v 1.0.1.3 88/02/12 10:27:21 root Exp $
 ''' 
 ''' $Log:	perldb.man,v $
+''' Revision 1.0.1.3  88/02/12  10:27:21  root
+''' patch22: some systems don't have \(bs
+''' 
 ''' Revision 1.0.1.2  88/01/30  17:04:48  root
 ''' patch 11: random cleanup
 ''' 
@@ -31,11 +34,11 @@
 '''     string Tr holds user defined translation string.
 '''     Bell System Logo is used as a dummy character.
 '''
-.tr \(bs-|\(bv\*(Tr
+.tr \(*W-|\(bv\*(Tr
 .ie n \{\
-.ds -- \(bs-
-.if (\n(.H=4u)&(1m=24u) .ds -- \(bs\h'-12u'\(bs\h'-12u'-\" diablo 10 pitch
-.if (\n(.H=4u)&(1m=20u) .ds -- \(bs\h'-12u'\(bs\h'-8u'-\" diablo 12 pitch
+.ds -- \(*W-
+.if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
+.if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\" diablo 12 pitch
 .ds L" ""
 .ds R" ""
 .ds L' '
